--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main class="animated">
       <header>
         <ul>
-          <img src="./images/vk.jpg" />
+          <img src="https://cdn.discordapp.com/attachments/992378305049264199/1204040235294523492/IMG_0152.jpg?ex=65d348da&is=65c0d3da&hm=ca1f4d46a6463d0676c178885c73d99e482a746bedfc30dda31846230fe3bea9&" />
         <h3>@ReakZz</h3>
           <a>
             <p2>Real Name: Vireak</p2>
