--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main class="animated">
       <header>
         <ul>
-          <img href="https://cdn.discordapp.com/attachments/992378305049264199/1204040235294523492/IMG_0152.jpg?ex=65d348da&is=65c0d3da&hm=ca1f4d46a6463d0676c178885c73d99e482a746bedfc30dda31846230fe3bea9&" />
+          <img "https://cdn.discordapp.com/attachments/992389341806596166/1232284697053102171/IMG_20240222_194408_036.jpg?ex=6628e60e&is=6627948e&hm=c4477ff20472fd2d9626730c473501994951cc1d4a1c9bcb29aa8780adfb46a4&" />
         <h3>@ReakZz</h3>
           <a>
             <p2>Real Name: Vireak</p2>
