--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <main class="animated">
       <header>
         <ul>
-          <img "https://cdn.discordapp.com/attachments/992389341806596166/1232284697053102171/IMG_20240222_194408_036.jpg?ex=6628e60e&is=6627948e&hm=c4477ff20472fd2d9626730c473501994951cc1d4a1c9bcb29aa8780adfb46a4&" />
-        <h3>@ReakZz</h3>
+          <img src="https://cdn.discordapp.com/attachments/992389341806596166/1232284697053102171/IMG_20240222_194408_036.jpg?ex=6628e60e&is=6627948e&hm=c4477ff20472fd2d9626730c473501994951cc1d4a1c9bcb29aa8780adfb46a4&" alt="profile" width="25" />
+              <h3>@ReakZz</h3>
           <a>
             <p2>Real Name: Vireak</p2>
           </a>
